KobraTeam_Compiler/KobraTeam_Compiler/src/antlr/.antlr/MONTyPythonParser.py
# Generated from c:/Users/Daniel/Desktop/MONTY_Python/MONTy_KobraTeam/KobraTeam_Compiler/KobraTeam_Compiler/src/antlr/MONTyPython.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MONTyPythonParser ( Parser ):

    grammarFileName = "MONTyPython.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'def'", "':'", "'size'", "'add'", 
                     "'remove'", "'for'", "'in'", "'range'", "'while'", 
                     "'if'", "'elif'", "'else'", "'input'", "'print'", "'return'", 
                     "<INVALID>", "<INVALID>", "'not'", "<INVALID>", "'int'", 
                     "'float'", "<INVALID>", "<INVALID>", "<INVALID>", "'*'", 
                     "'/'", "'+'", "'-'", "'%'", "'//'", "'**'", "'['", 
                     "']'", "'('", "')'", "','", "<INVALID>", "'and'", "'or'", 
                     "'nor'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "UNARY", "LOGIC", "NOT", "COMMENT", "INT_TYPE", 
                      "FLOAT_TYPE", "ID", "INT", "FLOAT", "MULT", "DIV", 
                      "PLUS", "MINUS", "MOD", "DIV_INT", "POW", "LBRACK", 
                      "RBRACK", "LPAREN", "RPAREN", "COMMA", "STRING", "AND", 
                      "OR", "NOR", "RELATIONAL_OP", "WS" ]

    RULE_program = 0
    RULE_command = 1
    RULE_expression = 2
    RULE_declaration = 3
    RULE_assignment = 4
    RULE_varType = 5
    RULE_listFunction = 6
    RULE_functionCall = 7
    RULE_parameter = 8
    RULE_forLoop = 9
    RULE_whileLoop = 10
    RULE_ifStatement = 11
    RULE_inputStatement = 12
    RULE_printStatement = 13
    RULE_returnStatement = 14

    ruleNames =  [ "program", "command", "expression", "declaration", "assignment", 
                   "varType", "listFunction", "functionCall", "parameter", 
                   "forLoop", "whileLoop", "ifStatement", "inputStatement", 
                   "printStatement", "returnStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    UNARY=17
    LOGIC=18
    NOT=19
    COMMENT=20
    INT_TYPE=21
    FLOAT_TYPE=22
    ID=23
    INT=24
    FLOAT=25
    MULT=26
    DIV=27
    PLUS=28
    MINUS=29
    MOD=30
    DIV_INT=31
    POW=32
    LBRACK=33
    RBRACK=34
    LPAREN=35
    RPAREN=36
    COMMA=37
    STRING=38
    AND=39
    OR=40
    NOR=41
    RELATIONAL_OP=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MONTyPythonParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(MONTyPythonParser.EOF, 0)
        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MONTyPythonParser.CommandContext)
            else:
                return self.getTypedRuleContext(MONTyPythonParser.CommandContext,i)




    def program(self):

        localctx = MONTyPythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = MONTyPythonParser.ProgContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14781572) != 0):
                self.state = 30
                self.command()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(MONTyPythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MONTyPythonParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MONTyPythonParser.AssignmentContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(MONTyPythonParser.FunctionCallContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(MONTyPythonParser.ForLoopContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(MONTyPythonParser.WhileLoopContext,0)


        def inputStatement(self):
            return self.getTypedRuleContext(MONTyPythonParser.InputStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(MONTyPythonParser.PrintStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(MONTyPythonParser.IfStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(MONTyPythonParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return MONTyPythonParser.RULE_command




    def command(self):

        localctx = MONTyPythonParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.functionCall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.forLoop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 42
                self.whileLoop()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 43
                self.inputStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 44
                self.printStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 45
                self.ifStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 46
                self.returnStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MONTyPythonParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class VariableContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MONTyPythonParser.ID, 0)


    class UnaryOpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MONTyPythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MONTyPythonParser.ExpressionContext,i)

        def UNARY(self):
            return self.getToken(MONTyPythonParser.UNARY, 0)


    class NumberContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(MONTyPythonParser.INT, 0)
        def FLOAT(self):
            return self.getToken(MONTyPythonParser.FLOAT, 0)
        def UNARY(self):
            return self.getToken(MONTyPythonParser.UNARY, 0)


    class GroupExpContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(MONTyPythonParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(MONTyPythonParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(MONTyPythonParser.RPAREN, 0)
        def NOT(self):
            return self.getToken(MONTyPythonParser.NOT, 0)


    class ListIndexContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.ID)
            else:
                return self.getToken(MONTyPythonParser.ID, i)
        def LBRACK(self):
            return self.getToken(MONTyPythonParser.LBRACK, 0)
        def RBRACK(self):
            return self.getToken(MONTyPythonParser.RBRACK, 0)


    class RelationalContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MONTyPythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MONTyPythonParser.ExpressionContext,i)

        def RELATIONAL_OP(self):
            return self.getToken(MONTyPythonParser.RELATIONAL_OP, 0)


    class LogicalContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MONTyPythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MONTyPythonParser.ExpressionContext,i)

        def LOGIC(self):
            return self.getToken(MONTyPythonParser.LOGIC, 0)


    class PowContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MONTyPythonParser.ExpressionContext,0)

        def POW(self):
            return self.getToken(MONTyPythonParser.POW, 0)


    class MultDivContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MONTyPythonParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MONTyPythonParser.ExpressionContext,i)

        def MULT(self):
            return self.getToken(MONTyPythonParser.MULT, 0)
        def DIV(self):
            return self.getToken(MONTyPythonParser.DIV, 0)
        def MOD(self):
            return self.getToken(MONTyPythonParser.MOD, 0)
        def DIV_INT(self):
            return self.getToken(MONTyPythonParser.DIV_INT, 0)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MONTyPythonParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = MONTyPythonParser.GroupExpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==19:
                    self.state = 50
                    self.match(MONTyPythonParser.NOT)


                self.state = 53
                self.match(MONTyPythonParser.LPAREN)
                self.state = 54
                self.expression(0)
                self.state = 55
                self.match(MONTyPythonParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = MONTyPythonParser.ListIndexContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 57
                self.match(MONTyPythonParser.ID)
                self.state = 58
                self.match(MONTyPythonParser.LBRACK)
                self.state = 59
                self.match(MONTyPythonParser.ID)
                self.state = 60
                self.match(MONTyPythonParser.RBRACK)
                pass

            elif la_ == 3:
                localctx = MONTyPythonParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 61
                self.match(MONTyPythonParser.ID)
                pass

            elif la_ == 4:
                localctx = MONTyPythonParser.NumberContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17:
                    self.state = 62
                    self.match(MONTyPythonParser.UNARY)


                self.state = 65
                _la = self._input.LA(1)
                if not(_la==24 or _la==25):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 84
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 82
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = MONTyPythonParser.MultDivContext(self, MONTyPythonParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 68
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 69
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3422552064) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 70
                        self.expression(8)
                        pass

                    elif la_ == 2:
                        localctx = MONTyPythonParser.UnaryOpContext(self, MONTyPythonParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 71
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 72
                        localctx.op = self.match(MONTyPythonParser.UNARY)
                        self.state = 73
                        self.expression(7)
                        pass

                    elif la_ == 3:
                        localctx = MONTyPythonParser.RelationalContext(self, MONTyPythonParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 74
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")

                        self.state = 75
                        self.match(MONTyPythonParser.RELATIONAL_OP)
                        self.state = 76
                        self.expression(6)
                        pass

                    elif la_ == 4:
                        localctx = MONTyPythonParser.LogicalContext(self, MONTyPythonParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 77
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 78
                        localctx.op = self.match(MONTyPythonParser.LOGIC)
                        self.state = 79
                        self.expression(5)
                        pass

                    elif la_ == 5:
                        localctx = MONTyPythonParser.PowContext(self, MONTyPythonParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 80
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")

                        self.state = 81
                        self.match(MONTyPythonParser.POW)
                        pass

             
                self.state = 86
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MONTyPythonParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IntDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT_TYPE(self):
            return self.getToken(MONTyPythonParser.INT_TYPE, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.ID)
            else:
                return self.getToken(MONTyPythonParser.ID, i)
        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.INT)
            else:
                return self.getToken(MONTyPythonParser.INT, i)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.COMMA)
            else:
                return self.getToken(MONTyPythonParser.COMMA, i)
        def UNARY(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.UNARY)
            else:
                return self.getToken(MONTyPythonParser.UNARY, i)


    class IntFunctionDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.INT_TYPE)
            else:
                return self.getToken(MONTyPythonParser.INT_TYPE, i)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.ID)
            else:
                return self.getToken(MONTyPythonParser.ID, i)
        def LPAREN(self):
            return self.getToken(MONTyPythonParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(MONTyPythonParser.RPAREN, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.COMMA)
            else:
                return self.getToken(MONTyPythonParser.COMMA, i)
        def FLOAT_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.FLOAT_TYPE)
            else:
                return self.getToken(MONTyPythonParser.FLOAT_TYPE, i)
        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.LBRACK)
            else:
                return self.getToken(MONTyPythonParser.LBRACK, i)
        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.RBRACK)
            else:
                return self.getToken(MONTyPythonParser.RBRACK, i)


    class FloatFunctionDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.ID)
            else:
                return self.getToken(MONTyPythonParser.ID, i)
        def LPAREN(self):
            return self.getToken(MONTyPythonParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(MONTyPythonParser.RPAREN, 0)
        def FLOAT_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.FLOAT_TYPE)
            else:
                return self.getToken(MONTyPythonParser.FLOAT_TYPE, i)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.COMMA)
            else:
                return self.getToken(MONTyPythonParser.COMMA, i)
        def INT_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.INT_TYPE)
            else:
                return self.getToken(MONTyPythonParser.INT_TYPE, i)
        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.LBRACK)
            else:
                return self.getToken(MONTyPythonParser.LBRACK, i)
        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.RBRACK)
            else:
                return self.getToken(MONTyPythonParser.RBRACK, i)


    class IntListFunctionDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.INT_TYPE)
            else:
                return self.getToken(MONTyPythonParser.INT_TYPE, i)
        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.LBRACK)
            else:
                return self.getToken(MONTyPythonParser.LBRACK, i)
        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.RBRACK)
            else:
                return self.getToken(MONTyPythonParser.RBRACK, i)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.ID)
            else:
                return self.getToken(MONTyPythonParser.ID, i)
        def LPAREN(self):
            return self.getToken(MONTyPythonParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(MONTyPythonParser.RPAREN, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.COMMA)
            else:
                return self.getToken(MONTyPythonParser.COMMA, i)
        def FLOAT_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.FLOAT_TYPE)
            else:
                return self.getToken(MONTyPythonParser.FLOAT_TYPE, i)


    class IntListDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT_TYPE(self):
            return self.getToken(MONTyPythonParser.INT_TYPE, 0)
        def LBRACK(self):
            return self.getToken(MONTyPythonParser.LBRACK, 0)
        def RBRACK(self):
            return self.getToken(MONTyPythonParser.RBRACK, 0)
        def ID(self):
            return self.getToken(MONTyPythonParser.ID, 0)


    class FloatDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.ID)
            else:
                return self.getToken(MONTyPythonParser.ID, i)
        def FLOAT_TYPE(self):
            return self.getToken(MONTyPythonParser.FLOAT_TYPE, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.COMMA)
            else:
                return self.getToken(MONTyPythonParser.COMMA, i)
        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.INT)
            else:
                return self.getToken(MONTyPythonParser.INT, i)
        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.FLOAT)
            else:
                return self.getToken(MONTyPythonParser.FLOAT, i)
        def UNARY(self, i:int=None):
            if i is None:
                return self.getTokens(MONTyPythonParser.UNARY)
            else:
                return self.getToken(MONTyPythonParser.UNARY, i)


    class FloatListDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT_TYPE(self):
            return self.getToken(MONTyPythonParser.FLOAT_TYPE, 0)
        def LBRACK(self):
            return self.getToken(MONTyPythonParser.LBRACK, 0)
        def RBRACK(self):
            return self.getToken(MONTyPythonParser.RBRACK, 0)
        def ID(self):
            return self.getToken(MONTyPythonParser.ID, 0)


    class FloatListFunctionDeclContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MONTyPythonParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)
